crates/sid-widgets/src/settings/snapshots/sid_widgets__settings__workspace_roots__tests__workspace_roots_render_focused.snap
---
source: crates/sid-widgets/src/settings/workspace_roots.rs
expression: s
---
┌ Workspace roots ─────────────────────────────────────────┐
│> /home/example/vcs                                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
border_top_left: fg=Rgb(212, 65, 65) modifier=NONE
title_first_char: symbol="W" fg=Rgb(230, 230, 240) modifier=BOLD
